2006-05-22 Roy Rankin <rrankin@ihug.com.au>
	* src/14bit-tmrs.h, src/14bit-tmrs.cc:
	- PWM fixes CCP high if duty cycle 0, CCPRnH loaded on TMR2
	  compare, PWM starts after first TMR2 compare, PMR2::put 
	  and PR2::put rewrite
	* regression/ccp/pwm_877a.asm, regression/ccp/Makefile,
	  regression/run_regression.sh: PWM regression
2006-05-21 Scott Dattalo <scott@dattalo.com>
	* modules/stimuli.h, modules/stimuli.cc: New files for 'extended'
	stimuli. Currently only an asynchronous stimulus replacement
	called 'pulsegen' has been created.
	* modules/Makefile.am, modules/gpsim_modules.cc: Added pulsegen to
	the default list of modules.
	* regression/run_regression.sh, regression/wavegen/16f877a.lkr,
	regression/wavegen/Makefile, regression/wavegen/pulsegen.asm,
	regression/wavegen/pulsegen.stc: New regression test to test the
	pulsegen module. (This test is really just a copy of the ccp
	regression test except that the asynchronous stimulus has been
	replaced with a pulsegen module).
	* src/symbol.cc: Module symbol descriptions were not getting
	printed 
	* cli/cmd_break.cc: removed bogus warning about cycle break points
	not getting set.
	
2006-05-21 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p16f87x.h, src/p16f87x.cc: Re-worked 16F871 to be derived from
	  16C64 rather than 74, because that's the easiest way I could find to
	  fix the RAM size (it had way too much) and the stray CCP2

2006-05-19 Scott Dattalo <scott@dattalo.com>
	* src/expr.h, src/expr.cc: Added LiteralArray class for (better)
	  handling array types.
	* cli/parse.yy, cli/scan.ll: experimenting with user-created typed
	  symbols.
	* src/processor.cc: Removed bogus check that prevented users from
	  over-writing the Rom contents. If the user wants to over write
	  ROM then they should be allow to!

2006-05-19 Roy Rankin <rrankin@ihug.com.au>
	* src/14bit-tmrs.cc: TMR2 counts down not up, period wrong,
	  fix 2 PWM with same duty cycle
	* src/p16f8x.cc: CCP1 pin determined by confguration word