@@ -209,7 +209,7 @@ required by gpsim GUI run time<br />
   <li>Create the gpsim_proj directory for the complete gpsim
 project</li>
   <li>Create the gpsim subdirectory for the gpsim package and
-download the latest gpsim version from <a href="http://sourceforge.net/cvs/?group_id=2341">CVS</a></li>
+download the latest gpsim version from <a href="http://sourceforge.net/svn/?group_id=2341">Subversion</a></li>
 </ul>
 <h3>CLI (supported only by VS .NET compilation):</h3>
 <ul>
@@ -376,13 +376,13 @@ GIMP) for Windows</a> project:</p>
   <li> <a href="http://gpsim.sourceforge.net/gpsimWin32/packages/gtk+extra-2.1.1-src-20051009.zip" name="gtk_extra_src">gtk+extra-2.1.1-src-20051009.zip</a></li>
 </ul>
 <hr />
-<p>Last update: March 12, 2006 by Borut Ražem</p>
+<p>Last update: May 23, 2006 by Borut Ražem</p>
 <table>
   <tbody>
     <tr>
       <td>
       <p><i>This site is hosted by</i></p>
-      <p><a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=2341&amp;type=5" alt="SourceForge.net Logo" /></a></p>
+      <p><a href="http://sourceforge.net"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=2341&amp;type=1" width="88" height="31" border="0" alt="SourceForge.net Logo" /></a></p>
       </td>
       <td><a href="http://www.nvu.com"><img src="http://www.nvu.com/made-with-Nvu-t.png" alt="Document made with Nvu" /></a> </td>
       <td><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0!" height="31" width="88" /></a><br />
